--- a/1f.css
+++ b/1f.css
@@ -789,4 +789,39 @@ input:active {
     align-items: flex-end;
     transition: transform 0.3s ease;
   }
+
+
+
+
+  .editor__circle{
+    width: 200px;
+    height: 200px;
+    border: 2px solid rgb(0, 0, 0);
+    border-radius: 100%;
+    display: flex;
+    justify-content:right;
+    align-items: center;
+    position: absolute;
+    bottom: -90px;
+    right: -45px;
+    color: #f49517;
+    padding: 20px;
+    padding-bottom: 70px;
+    padding-right: 40px;
+    font-size: 1.1em;
+    text-align: center;
+    font-weight: bold;
+    font-size: 30px;
+    transition: all 1.3s;
+  }
+
+
+  .editor__item:hover .editor__circle{
+    transform: scale(1.1);
+    bottom: -90px;
+    right: -45px;
+  }
+
+
+
   }
