--- a/1f.css
+++ b/1f.css
@@ -664,17 +664,18 @@ color: #f49517;
 
 
 
-    .stylish-button {
-      padding: 10px 145px;
-      font-size: 18px;
-      color: #ffffff;
-      background-color: #555;
-      border: none;
-      border-radius: 0px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      cursor: pointer;
-      transition: background-color 0.3s ease, transform 0.2s ease;
-  }
+  .stylish-button {
+    margin-top: 8px;
+    padding: 10px 145px;
+    font-size: 18px;
+    color: #ffffff;
+    background-color: #555;
+    border: none;
+    border-radius: 18px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
   
   .stylish-button:hover {
     color: #000000;
