--- a/1f.css
+++ b/1f.css
@@ -52,7 +52,7 @@ img {
   display: flex;
   justify-content: space-between;
   
-  margin-left: 75px;
+  margin-left: 7%;
   margin-top: 20px;
 }
 .main-header__link {
